--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,12 @@
 package_name: gan_model
 
+hyper_parameters:
+  latent_dim: 100,
+  lr: 0.0002,
+  b1: 0.5,
+  b2: 0.999,
+  batch_size: 256,
+  
+PATH_DATASETS: "data/data"
+BATCH_SIZE: 256
+NUM_WORKERS: 4
